Python/Lib/gtilib/gtilib/gtilib.py


    @Deprecated
    def CloseDevice(self):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiCloseDevice.argtypes = (c_ulong,)
        else:
            gtiSdkLib.GtiCloseDevice.argtypes = (c_ulonglong,)
        return gtiSdkLib.GtiCloseDevice(self.obj)

    @Deprecated
    def GtiDeviceCreate(self, DeviceType, FilterFileName='', ConfigFileName=''):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiDeviceCreate.argtypes = (c_ulong, c_int, c_char_p, c_char_p)
            gtiSdkLib.GtiDeviceCreate.restype = c_ulong
        else:
            gtiSdkLib.GtiDeviceCreate.argtypes = (c_ulonglong, c_int, c_char_p, c_char_p)
            gtiSdkLib.GtiDeviceCreate.restype = c_ulonglong
        return gtiSdkLib.GtiDeviceCreate(self.obj, DeviceType, FilterFileName.encode('ascii'), ConfigFileName.encode('ascii'))

    @Deprecated
    def GtiDeviceRelease(self):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiDeviceRelease.argtypes = (c_ulong,)
        else:
            gtiSdkLib.GtiDeviceRelease.argtypes = (c_ulonglong,)
        return gtiSdkLib.GtiDeviceRelease(self.obj)

    @Deprecated
    def Initialization(self):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiInitialization.argtypes = (c_ulong,)
        else:
            gtiSdkLib.GtiInitialization.argtypes = (c_ulonglong,)
        return gtiSdkLib.GtiInitialization(self.obj)

    @Deprecated
    def SelectNetwork(self, NetworkId):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiSelectNetwork.argtypes = (c_ulong, c_int)
        else:
            gtiSdkLib.GtiSelectNetwork.argtypes = (c_ulonglong, c_int)
        return gtiSdkLib.GtiSelectNetwork(self.obj, NetworkId)

    @Deprecated
    def SendImage(self, Image224Buffer, BufferLen):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiSendImage.argtypes = (c_ulong, c_char_p, c_int)
        else:
            gtiSdkLib.GtiSendImage.argtypes = (c_ulonglong, c_char_p, c_int)
        return gtiSdkLib.GtiSendImage(self.obj, Image224Buffer, BufferLen)

    @Deprecated
    def SendImageFloat(self, Image224Buffer, BufferLen):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiSendImageFloat.argtypes = (c_ulong, c_char_p, c_int)
        else:
            gtiSdkLib.GtiSendImageFloat.argtypes = (c_ulonglong, c_char_p, c_int)
        return gtiSdkLib.GtiSendImageFloat(self.obj, Image224Buffer, BufferLen)

    @Deprecated
    def SendTiledImage(self, Image224Buffer, BufferLen):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiSendTiledImage.argtypes = (c_ulong, c_char_p, c_int)
        else:
            gtiSdkLib.GtiSendTiledImage.argtypes = (c_ulonglong, c_char_p, c_int)
        return gtiSdkLib.GtiSendTiledImage(self.obj, Image224Buffer, BufferLen)

    @Deprecated
    def GetOutputData(self, OutputBuffer, BufferLen):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiGetOutputData.argtypes = (c_ulong, c_char_p, c_int)
        else:
            gtiSdkLib.GtiGetOutputData.argtypes = (c_ulonglong, c_char_p, c_int)
        return gtiSdkLib.GtiGetOutputData(self.obj, OutputBuffer, BufferLen)

    @Deprecated
    def GetOutputDataFloat(self, OutputBuffer, BufferLen):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiGetOutputDataFloat.argtypes = (c_ulong, c_char_p, c_int)
        else:
            gtiSdkLib.GtiGetOutputDataFloat.argtypes = (c_ulonglong, c_char_p, c_int)
        return gtiSdkLib.GtiGetOutputDataFloat(self.obj, OutputBuffer, BufferLen)

    def GtiHandleOneFrame(self, inputBuffer, inputLen, outputBuffer, outLen):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiHandleOneFrame.argtypes = (c_ulong, c_char_p, c_int, c_char_p, c_int)
        else:
            gtiSdkLib.GtiHandleOneFrame.argtypes = (c_ulonglong, c_char_p, c_int, c_char_p, c_int)
        return gtiSdkLib.GtiHandleOneFrame(self.obj, inputBuffer, inputLen, outputBuffer, outLen)

    def HandleOneFrameFloat(self, inputBuffer, inputLen, outputBuffer, outLen):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiHandleOneFrameFloat.argtypes = (c_ulong, c_char_p, c_int, c_char_p, c_int)
        else:
            gtiSdkLib.GtiHandleOneFrameFloat.argtypes = (c_ulonglong, c_char_p, c_int, c_char_p, c_int)
        return gtiSdkLib.GtiHandleOneFrameFloat(self.obj, inputBuffer, inputLen, outputBuffer, outLen)

    def HandleOneFrameLt(self, inBuff, inLen, outBuff, outLen):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiHandleOneFrameFloat.argtypes = (c_ulong, c_char_p, c_int, c_char_p, c_int)
        else:
            gtiSdkLib.GtiHandleOneFrameFloat.argtypes = (c_ulonglong, c_char_p, c_int, c_char_p, c_int)
        ret = gtiSdkLib.GtiHandleOneFrameFloat(self.obj, inBuff, inLen, outBuff, outLen)
        outList = np.frombuffer(outBuff, dtype='float32', count=outLen, offset=0)
        return ret, outList

    def GetOutputLength(self):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiGetOutputLength.argtypes = (c_ulong,)
        else:
            gtiSdkLib.GtiGetOutputLength.argtypes = (c_ulonglong,)
        return gtiSdkLib.GtiGetOutputLength(self.obj)

    @Deprecated
    def OpenDeviceAndInit(self, deviceName):
        # Open device.
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiOpenDevice.argtypes = (c_ulong, c_char_p)
        else:
            gtiSdkLib.GtiOpenDevice.argtypes = (c_ulonglong, c_char_p)
        gtiSdkLib.GtiOpenDevice(self.obj, deviceName.encode('ascii'))
        # Initialization.
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiInitialization.argtypes = (c_ulong,)
        else:
            gtiSdkLib.GtiInitialization.argtypes = (c_ulonglong,)
        ret = gtiSdkLib.GtiInitialization(self.obj)
        return ret

    @Deprecated
    def ReopenDevice(self, deviceName):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiCloseDevice.argtypes = (c_ulong,)
        else:
            gtiSdkLib.GtiCloseDevice.argtypes = (c_ulonglong,)
        gtiSdkLib.GtiCloseDevice(self.obj)
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiOpenDevice.argtypes = (c_ulong, c_char_p)
        else:
            gtiSdkLib.GtiOpenDevice.argtypes = (c_ulonglong, c_char_p)
        return gtiSdkLib.GtiOpenDevice(self.obj, deviceName.encode('ascii'))

    def UnlockDevice(self):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiUnlockDevice.argtypes = (c_ulong,)
        else:
            gtiSdkLib.GtiUnlockDevice.argtypes = (c_ulonglong,)
        return gtiSdkLib.GtiUnlockDevice(self.obj)

    def ResetDevice(self):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiResetDevice.argtypes = (c_ulong,)
        else:
            gtiSdkLib.GtiResetDevice.argtypes = (c_ulonglong,)
        return gtiSdkLib.GtiResetDevice(self.obj)

    def GetDeviceType(self):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiGetDeviceType.argtypes = (c_ulong,)
        else:
            gtiSdkLib.GtiGetDeviceType.argtypes = (c_ulonglong,)
        return gtiSdkLib.GtiGetDeviceType(self.obj)

    def GetDeviceName(self):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiGetDeviceName.argtypes = (c_ulong,)
        else:
            gtiSdkLib.GtiGetDeviceName.argtypes = (c_ulonglong,)
        return gtiSdkLib.GtiGetDeviceName(self.obj)

    def GetDevicePlatformName(self):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiGetDevicePlatformName.argtypes = (c_ulong,)
        else:
            gtiSdkLib.GtiGetDevicePlatformName.argtypes = (c_ulonglong,)
        return gtiSdkLib.GtiGetDevicePlatformName(self.obj)

    def CheckDeviceStatus(self):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiCheckDeviceStatus.argtypes = (c_ulong,)
        else:
            gtiSdkLib.GtiCheckDeviceStatus.argtypes = (c_ulonglong,)
        return gtiSdkLib.GtiCheckDeviceStatus(self.obj)

    def LoadModel(self, modelUrl, mode, networkId):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiLoadModel.argtypes = (c_ulong, c_char_p, c_int, c_int)
        else:
            gtiSdkLib.GtiLoadModel.argtypes = (c_ulonglong, c_char_p, c_int, c_int)
        return gtiSdkLib.GtiLoadModel(self.obj, modelUrl.encode('ascii'), mode, networkId)

    def ChangeModelMode(self, mode):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiChangeModelMode.argtypes = (c_ulong, c_int)
        else:
            gtiSdkLib.GtiChangeModelMode.argtypes = (c_ulonglong, c_int)
        return gtiSdkLib.GtiChangeModelMode(self.obj, mode)

    def ChangeModelNetworkId(self, networkId):
        if(ARCH_SIZE == 4):
            gtiSdkLib.GtiChangeModelNetworkId.argtypes = (c_ulong, c_int)
        else:
            gtiSdkLib.GtiChangeModelNetworkId.argtypes = (c_ulonglong, c_int)
        return gtiSdkLib.GtiChangeModelNetworkId(self.obj, networkId)

    @Deprecated
    def DeviceRelease(self):
        return self.GtiDeviceRelease()

